added crud functions

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,3 +1,16 @@
 <!-- ======= views/menu.erb ======= -->
 
 <h1>Home</h1>
+
+<div id="homepage">
+    <h1>Welcome to Mike Sqaured</h1>
+
+    <div id="account_log">
+        <a href="/user_sign_in">User Sign In</a><br>
+        <a href="/logout">Log Out</a>
+    </div>
+</div>
+
+<div id="newUser">
+    <a href="/user_registration_form">Register</a><br>
+</div>
