--- a/views/profile.erb
+++ b/views/profile.erb
@@ -12,6 +12,6 @@
 
 <div id="edit_account">
     <p>Change Profile Settings</p>
-    <a href="/update_clinic_form/<%= session[:user_id]%>">Update your Profile</a><br>
-    <a href="/delete_clinic/<%= session[:user_id]%>">Delete your Profile</a><br>
+    <a href="/update_user_form/<%= session[:user_id]%>">Update your Profile</a><br>
+    <a href="/delete_user/<%= session[:user_id]%>">Delete your Profile</a><br>
 </div>
