--- a/views/profile.erb
+++ b/views/profile.erb
@@ -15,3 +15,5 @@
     <a href="/update_user_form/<%= session[:user_id]%>">Update your Profile</a><br>
     <a href="/delete_user/<%= session[:user_id]%>">Delete your Profile</a><br>
 </div>
+
+<a href="/logout">Logout</a>
