--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,14 +6,6 @@
 	</head>
   <!-- ======= ======= ======= body ======= ======= ======= -->
 	<body>
-	    <!-- ======= header ======= -->
-	    <div id="header" class="section">
-	        <p>header</p>
-	    <!-- ======= menu ======= -->
-			<div id="menu-container" class="section">
-				<%= erb :menu %>
-			</div>
-	    </div>
 		<!-- ====== Flash Notice ====== -->
 		<% if flash[:notice] %>
 			<div class="flash_notice">
@@ -26,7 +18,7 @@
 		</div>
 	    <!-- ======= footer ======= -->
 	    <div id="footer" class="section">
-	        <p>footer</p>
+	        <p align="center">MIKESQUARED © 2017</p>
 	    </div>
 	    <!-- ======= scripts ======= -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
