--- a/views/user_sign_in.erb
+++ b/views/user_sign_in.erb
@@ -1,10 +1,12 @@
 <!-- ======= views/user_sign_in.erb ======= -->
 <h1>User Sign In</h1>
 
-<!-- username, password -->
-
 <form  id="user_sign_in" method="POST" action="/user_sign_in">
-    <div><label for="username">Username</label><input type="username" name="username" value=""></div>
-    <div><label for="password">Password</label><input type="password" name="password" value=""></div>
-    <input type="submit" id="submit">
+
+    <div><label for="username"><p id="usern"><b>Username</b></p></label><input type="username" id="username" name="username" value=""></div>
+
+    <div><label for="password"><p id="userp"><b>Password</b></p></label><input type="password" name="password" value=""></div><br>
+
+    <input type="submit" id="submituser">
+
 </form>
