--- a/views/menu.erb
+++ b/views/menu.erb
@@ -1,7 +1,7 @@
 <!-- ======= views/menu.erb ======= -->
 
 <!-- == dynamically create menu items == -->
-<% menu_items_array = [ "Home", "Write", "Blog", "Feed", "Search" ] %>
+<% menu_items_array = [ "Home", "write", "blog", "Feed", "Search" ] %>
 <div id="menu_items">
   <% for z in menu_items_array %>
   <% h = z %>
@@ -9,7 +9,7 @@
         <% h = "Home" %>
         <% z = "/" %>
     <% end %>
-    <a href = <%= z %>>
+    <a href = "/<%= z %>">
       <div class="menu_item"> <%= h %></div>
     </a>
   <% end %>
