migrated new corrected tables with integers and added welcome page

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,7 +1,6 @@
-<!-- ======= views/home.erb ======= -->
+<!-- ======= views/landing_page.erb ======= -->
 
 <h1 id="h1" align="center">User Sign In</h1>
-
 
 <!-- username, password -->
 <div class="login_form">
@@ -28,7 +27,6 @@
 <!-- firstname, lastname, username, password, email -->
 <div id="register_form">
 
-
     <h1 align="center">User Form</h1>
 
     <form  id="user_registration_form" method="POST" action="/user">
@@ -47,34 +45,3 @@
 
     </form>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <h1>Home</h1>
-
-<div id="homepage">
-    <h1>Welcome to Mike Squared</h1>
-
-    <div id="account_log">
-        <a href="/user_sign_in">User Sign In</a><br>
-        <a href="/logout">Log Out</a>
-    </div>
-</div>
-
-<div id="newUser">
-    <a href="/user_registration_form">Register</a><br>
-</div> -->
