--- a/views/menu.erb
+++ b/views/menu.erb
@@ -1,7 +1,7 @@
 <!-- ======= views/menu.erb ======= -->
 
 <!-- == dynamically create menu items == -->
-<% menu_items_array = [ "Home", "Write", "Blog", "Feed", "Search" ] %>
+<% menu_items_array = [ "Home", "Blog","Profile" "Write", "Directory" ] %>
 <div id="menu_items">
   <% for z in menu_items_array %>
   <% h = z %>
