Re-added files from Master branch back over to Write

--- a/views/write.erb
+++ b/views/write.erb
@@ -10,10 +10,10 @@
 <form align="center" id="newpost_form" method="POST" action="/newpost">
 
 <div><label for="title"><p id="title"><b>TITLE</b></p></label></div>
-<textarea name="text" rows="3" cols="90" wrap="soft"> </textarea>
+<textarea name="title" rows="3" cols="90" wrap="soft"> </textarea>
 
 <div><label for="content"><p id="title"><b>CONTENT</b></p></label></div>
-<textarea maxlength="150" name="text" rows="13" cols="90" wrap="soft"> </textarea>
+<textarea maxlength="150" name="content" rows="13" cols="90" wrap="soft"> </textarea>
 
     <br>
     <br>
