--- a/views/write.erb
+++ b/views/write.erb
@@ -7,7 +7,7 @@
 <br>
 <br>
 
-<form align="center" id="newpost_form" method="POST" action="/newpost">
+<form align="center" id="newpost_form" method="POST" action="/blog">
 
 <div><label for="title"><p id="title"><b>TITLE</b></p></label></div>
 <textarea name="title" rows="3" cols="90" wrap="soft"> </textarea>
