--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -1,170 +1,198 @@
-h1
-{
-    text-shadow: 2px 2px gold;
-    letter-spacing: 0.1em;
-    margin-bottom: 0;
-}
-body
-{
-    background-color: #ffffcc;
-}
-//====USER LOGIN FORM====
-.login_form
-{
-    position: relative;
-    top: 20px;
-    height: 450px;
-    width: auto;
-    color: blue;
-    border: 1px solid green;
-    background: black;
-    visibility: visible;
-    box-shadow: 60px 60px 60px 60px red;
-}
-#user_name_label
-{
-    text-align: center;
-    color: red;
-    font-size: 25px;
-}
-#user_password_label
-{
-    text-align: center;
-    color: red;
-    font-size: 25px;
-}
-#username
-{
-    position: relative;
-    left: 540px;
-    height: 20px;
-    width: 150px;
-    background-color: cyan;
-}
-#userpassword
-{
-    position: relative;
-    left: 540px;
-    height: 20px;
-    width: 150px;
-    background-color: cyan;
-}
-#submituser
-{
-    position: relative;
-    left: 580px;
-    height: 40px;
-    width: 80px;
-    background-color: yellow;
-    color: red;
-}
-//====REGISTRATION FORM====
-#register_area
-{
-    position: relative;
-    top: 100px;
-    text-align: center;
-    color: orange;
-    font-size: 15px;
-    height: 240px;
-}
-#register_text
-{
-    position: relative;
-    visibility: visible;
-    top: 20px;
-    font-size: 20px;
-    color: blue;
-}
-#register_submit
-{
-    position: relative;
-    top: -70px;
-    height: 40px;
-    width: 80px;
-    background-color: yellow;
-    color: red;
-}
-#register_form
-{
-    position: relative;
-    visibility: hidden;
-    top: -100px;
-    height: 600px;
-    width: auto;
-    color: blue;
-    border: 1px solid green;
-    background-color: gold;
-    box-shadow: 60px 60px 60px 60px blue;
-}
-#username_label
-{
-    text-align: center;
-    color: red;
-    font-size: 20px;
-}
-#reg_password_label
-{
-    text-align: center;
-    color: red;
-    font-size: 20px;
-}
-#reg_firstname_label
-{
-    text-align: center;
-    color: red;
-    font-size: 20px;
-}
-#reg_lastname_label
-{
-    text-align: center;
-    color: red;
-    font-size: 20px;
-}
-#reg_email_label
-{
-    text-align: center;
-    color: red;
-    font-size: 20px;
-}
-#reg_username
-{
-    position: relative;
-    left: 540px;
-    height: 20px;
-    width: 150px;
-    background-color: cyan;
-}
-#reg_password
-{
-    position: relative;
-    left: 540px;
-    height: 20px;
-    width: 150px;
-    background-color: cyan;
-
-}
-#reg_firstname
-{
-    position: relative;
-    left: 540px;
-    height: 20px;
-    width: 150px;
-    background-color: cyan;
-}
-#reg_lastname
-{
-    position: relative;
-    left: 540px;
-    height: 20px;
-    width: 150px;
-    background-color: cyan;
-}
-#reg_email
-{
-    position: relative;
-    left: 540px;
-    height: 20px;
-    width: 150px;
-    background-color: cyan;
-}
+// @import "loginform";
+// @import "registrationform";
+// @import "writepage";
+// @import "profile";
+@import "menu";
+//
+// h1
+// {
+//     text-shadow: 2px 2px gold;
+//     letter-spacing: 0.1em;
+//     margin-bottom: 0;
+// }
+// body
+// {
+//     background-color: #ffffcc;
+// }
+// //====USER LOGIN FORM====
+// .login_form
+// {
+//     position: relative;
+//     top: 20px;
+//     height: 450px;
+//     width: auto;
+//     color: blue;
+//     border: 1px solid green;
+//     background: black;
+//     visibility: visible;
+//     box-shadow: 60px 60px 60px 60px red;
+// }
+// #user_name_label
+// {
+//     text-align: center;
+//     color: red;
+//     font-size: 25px;
+// }
+// #user_password_label
+// {
+//     text-align: center;
+//     color: red;
+//     font-size: 25px;
+// }
+// #username
+// {
+//     position: relative;
+//     left: 540px;
+//     height: 20px;
+//     width: 150px;
+//     background-color: cyan;
+// }
+// #userpassword
+// {
+//     position: relative;
+//     left: 540px;
+//     height: 20px;
+//     width: 150px;
+//     background-color: cyan;
+// }
+// #submituser
+// {
+//     position: relative;
+//     left: 580px;
+//     height: 40px;
+//     width: 80px;
+//     background-color: yellow;
+//     color: red;
+// }
+// //====REGISTRATION FORM====
+// #register_area
+// {
+//     position: relative;
+//     top: 100px;
+//     text-align: center;
+//     color: orange;
+//     font-size: 15px;
+//     height: 240px;
+// }
+// #register_text
+// {
+//     position: relative;
+//     visibility: visible;
+//     top: 20px;
+//     font-size: 20px;
+//     color: blue;
+// }
+// #register_submit
+// {
+//     position: relative;
+//     top: -70px;
+//     height: 40px;
+//     width: 80px;
+//     background-color: yellow;
+//     color: red;
+// }
+// #register_form
+// {
+//     position: relative;
+//     visibility: hidden;
+//     top: -100px;
+//     height: 600px;
+//     width: auto;
+//     color: blue;
+//     border: 1px solid green;
+//     background-color: gold;
+//     box-shadow: 60px 60px 60px 60px blue;
+// }
+// #username_label
+// {
+//     text-align: center;
+//     color: red;
+//     font-size: 20px;
+// }
+// #reg_password_label
+// {
+//     text-align: center;
+//     color: red;
+//     font-size: 20px;
+// }
+// #reg_firstname_label
+// {
+//     text-align: center;
+//     color: red;
+//     font-size: 20px;
+// }
+// #reg_lastname_label
+// {
+//     text-align: center;
+//     color: red;
+//     font-size: 20px;
+// }
+// #reg_email_label
+// {
+//     text-align: center;
+//     color: red;
+//     font-size: 20px;
+// }
+// #reg_username
+// {
+//     position: relative;
+//     left: 540px;
+//     height: 20px;
+//     width: 150px;
+//     background-color: cyan;
+// }
+// #reg_password
+// {
+//     position: relative;
+//     left: 540px;
+//     height: 20px;
+//     width: 150px;
+//     background-color: cyan;
+//
+// }
+// #reg_firstname
+// {
+//     position: relative;
+//     left: 540px;
+//     height: 20px;
+//     width: 150px;
+//     background-color: cyan;
+// }
+// #reg_lastname
+// {
+//     position: relative;
+//     left: 540px;
+//     height: 20px;
+//     width: 150px;
+//     background-color: cyan;
+// }
+// #reg_email
+// {
+//     position: relative;
+//     left: 540px;
+//     height: 20px;
+//     width: 150px;
+//     background-color: cyan;
+// }
+// .sidebar-item
+// {
+//     margin: 10px auto;
+//     height: 100px;
+//     width: 65%;
+//     font-size: 20px;
+//     transform: skewX(10deg);
+//     line-height: 80px;
+//     font-style: Arial, serif;
+//     background-color: red;
+// }
+// .sidebar-item:hover
+// {
+//     background-color: blue;
+// }
+// #num
+// {
+//     font-size: 25px;
+//     font-family: Verdana serif;
+//     text-align: center;
+//     letter-spacing: 0.2em;
+// }
