--- a/assets/sass/_menu.scss
+++ b/assets/sass/_menu.scss
@@ -1,6 +1,9 @@
-#menu_items {
+//==NAV BAR==
+
+#menu
+{
     width: 100%;
-    height: 30px;
+    height: 40px;
     justify-content: center;
     background-color: green;
     opacity: 0.8;
@@ -8,20 +11,22 @@
     margin: 1px;
     display: block;
     left: 20px;
-    letter-spacing: 0.2em;
+    letter-spacing: 0.4em;
     line-spacing: 2em;
-    /*flex-direction: row;*/
 }
-.menu_item {
+#menu_items
+{
     height: 15px;
     width: 100%;
     border: 20px blue;
-    font-size: 12px;
-    padding: 1px;
-    margin: 1px 1px 1px 1px;
+    font-size: 18px;
+    padding: 0px;
+    margin: 2px 2px 2px 2px;
+    margin-left: 40px;
     color: green;
 }
-.menu_item > a {
+#menu_items > a
+{
     float: left;
     display: block;
     margin: 5px 76px;
