--- a/public/styles.css
+++ b/public/styles.css
@@ -1,41 +1,85 @@
 /*
-Error: Invalid CSS after "...ort "loginform"": expected "{", was ";"
-        on line 2 of assets/sass/styles.scss
+Error: Invalid CSS after "...ition: relative": expected "{", was ";"
+        on line 9 of assets/sass/_registrationform.scss
+        from line 2 of assets/sass/styles.scss
 
-1: <<<<<<< HEAD
-2: @import "loginform";
-3: @import "registrationform";
-4: @import "writepage";
-5: @import "navbar";
-6: @import "profile";
-7: 
+4: {
+5: =======
+6: // ========== Registration Form ==========
+7: #register_area {
+8: >>>>>>> 0a9e3ae2be2f0c966cbfef4742ad1e956d325f8c
+9:     position: relative;
+10:     top: 100px;
+11:     text-align: center;
+12:     color: orange;
+13:     font-size: 15px;
+14:     height: 240px;
 
 Backtrace:
+assets/sass/_registrationform.scss:9
 assets/sass/styles.scss:2
 /Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/scss/parser.rb:1207:in `expected'
 /Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/scss/parser.rb:1137:in `expected'
 /Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/scss/parser.rb:1132:in `tok!'
 /Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/scss/parser.rb:665:in `block'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/scss/parser.rb:735:in `declaration_or_ruleset'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/scss/parser.rb:685:in `block_child'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/scss/parser.rb:674:in `block_contents'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/scss/parser.rb:666:in `block'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/scss/parser.rb:735:in `declaration_or_ruleset'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/scss/parser.rb:685:in `block_child'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/scss/parser.rb:674:in `block_contents'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/scss/parser.rb:666:in `block'
 /Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/scss/parser.rb:658:in `ruleset'
 /Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/scss/parser.rb:684:in `block_child'
 /Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/scss/parser.rb:674:in `block_contents'
 /Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/scss/parser.rb:125:in `stylesheet'
 /Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/scss/parser.rb:41:in `parse'
 /Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/engine.rb:406:in `_to_tree'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/engine.rb:312:in `to_tree'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/tree/visitors/perform.rb:326:in `block in visit_import'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/stack.rb:88:in `block in with_import'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/stack.rb:115:in `with_frame'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/stack.rb:88:in `with_import'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/tree/visitors/perform.rb:325:in `visit_import'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/stack.rb:79:in `block in with_base'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/stack.rb:115:in `with_frame'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/stack.rb:79:in `with_base'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/tree/visitors/perform.rb:160:in `visit'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/tree/visitors/base.rb:52:in `map'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/tree/visitors/perform.rb:169:in `block in visit_children'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/tree/visitors/perform.rb:181:in `with_environment'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/tree/visitors/perform.rb:168:in `visit_children'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/tree/visitors/perform.rb:188:in `visit_root'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/tree/visitors/perform.rb:159:in `visit'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/tree/visitors/perform.rb:8:in `visit'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/tree/root_node.rb:36:in `css_tree'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
 /Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/engine.rb:381:in `_render_with_sourcemap'
 /Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/engine.rb:298:in `render_with_sourcemap'
 /Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/plugin/compiler.rb:492:in `update_stylesheet'
 /Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
 /Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/plugin/compiler.rb:209:in `each'
 /Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/plugin/compiler.rb:473:in `on_file_changed'
-/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/plugin/compiler.rb:331:in `block in watch'
-/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/vendor/listen/lib/listen/listener.rb:252:in `on_change'
-/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
-/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/vendor/listen/lib/listen/adapters/polling.rb:48:in `poll_changed_directories'
-/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/plugin/compiler.rb:294:in `watch'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/plugin.rb:109:in `method_missing'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/exec/sass_scss.rb:360:in `watch_or_update'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/exec/sass_scss.rb:51:in `process_result'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/exec/base.rb:52:in `parse'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/lib/sass/exec/base.rb:19:in `parse!'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/gems/sass-3.4.24/bin/sass:13:in `<top (required)>'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/bin/sass:23:in `load'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/bin/sass:23:in `<main>'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/bin/ruby_executable_hooks:15:in `eval'
+/Users/draftamerica/.rvm/gems/ruby-2.4.0/bin/ruby_executable_hooks:15:in `<main>'
 */
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Invalid CSS after \"...ort \"loginform\"\": expected \"{\", was \";\"\A         on line 2 of assets/sass/styles.scss\A \A 1: <<<<<<< HEAD\A 2: @import \"loginform\";\A 3: @import \"registrationform\";\A 4: @import \"writepage\";\A 5: @import \"navbar\";\A 6: @import \"profile\";\A 7: "; }
+  content: "Error: Invalid CSS after \"...ition: relative\": expected \"{\", was \";\"\A         on line 9 of assets/sass/_registrationform.scss\A         from line 2 of assets/sass/styles.scss\A \A 4: {\A 5: =======\A 6: // ========== Registration Form ==========\A 7: #register_area {\A 8: >>>>>>> 0a9e3ae2be2f0c966cbfef4742ad1e956d325f8c\A 9:     position: relative;\A 10:     top: 100px;\A 11:     text-align: center;\A 12:     color: orange;\A 13:     font-size: 15px;\A 14:     height: 240px;"; }
